--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="timeout">Timeout</string>
     <string name="sync">Sync</string>
     <string name="async">Async</string>
+    <string name="lazy_async">Lazy Async</string>
 
 </resources>
