--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="async">Async</string>
     <string name="lazy_async">Lazy Async</string>
     <string name="dispatcher">Dispatcher</string>
-    <string name="main_scope">Main Scope</string>
-    <string name="main_scope_tips">onPause Cancel</string>
+    <string name="flow">Flow</string>
+    <string name="timeout_flow">Timeout Flow</string>
+    <string name="transform_take_flow">Transform take Flow</string>
+
 
 
 </resources>
